--- a/practical_application_III/prompt_III.ipynb
+++ b/practical_application_III/prompt_III.ipynb
@@ -3421,7 +3421,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# reate a baseline model using Linear regression\n",
+        "# Create a baseline model using Linear regression\n",
         "from sklearn.metrics import r2_score\n",
         "LR = LinearRegression()\n",
         "LR.fit(X_train, y_train)\n",
@@ -3450,21 +3450,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 45,
       "metadata": {
         "id": "8NHoQdaXXmnB",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e270c20a-15d9-4580-91ac-165073036315"
+        "outputId": "6276e54f-8601-4663-cbe2-22917a893160"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The MSE is 0.06653451022073982\n",
-            "R2score: 1.0\n"
+            "The MSE is 0.06653451022073982\n"
           ]
         }
       ],
@@ -3477,7 +3476,7 @@
         "predicted_y = ridge.predict(X_test)\n",
         "from sklearn.metrics import mean_squared_error\n",
         "print('The MSE is', mean_squared_error(y_test, predicted_y))\n",
-        "print('R2score:',ridge.score(X_test,predicted_y))\n",
+        "\n",
         "\n"
       ]
     },
