upload -final edits
upload -final edits

--- a/capstone/capstone1.ipynb
+++ b/capstone/capstone1.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyOjBXhKLHB1/wf6CCcsmXVZ",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -19,8 +17,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Kriskan17/Berkeley_AIML/blob/main/Untitled0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -64,6 +61,18 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Business Insight\n",
+        "In this project, the objective is to explore and investigate different factors that determine the Breast cancer diagnosis. The 30 features provided are charateristics of cell nuclei in tissue sample collected from patients. We aim to predict if a sample is Malignant(cancerous) or Benign (harmless),\n",
+        "despite the popular metric that is used in data science is 'Accuracy', we plan to use 'Recall' as the primary metric for this project. After reviewing\n",
+        "physician and expert advice on this topic it was concluded that avoiding 'False Negatives' is more important than the accuracy of the model. Not doing so, might mean potentially catastrophic consequences for the patient."
+      ],
+      "metadata": {
+        "id": "YqBVVdmxvPgp"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#import the libraries\n",
@@ -96,7 +105,7 @@
       "metadata": {
         "id": "qvqIVXjTFxvS"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +117,7 @@
       "metadata": {
         "id": "TMiV28GlFmRB"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,7 +149,7 @@
         "id": "FQi7KT79Fw4U",
         "outputId": "c2d23ad4-45b7-4bb0-aea0-bdc27a4fec58"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -675,7 +684,7 @@
         "id": "ihIcQMIWHuvh",
         "outputId": "f27a6e7a-5274-43c6-ef2f-2df221a8e037"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -738,7 +747,7 @@
         "id": "oOSMaeztKLtA",
         "outputId": "c37f8b55-0143-43a0-8294-4a2f89bda59a"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -804,7 +813,7 @@
       "metadata": {
         "id": "n2jWkJuyKUxs"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -820,7 +829,7 @@
         "id": "mM2IAvphLA7U",
         "outputId": "cf92b231-3445-4db6-bf7b-9fa3ef260d9a"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -857,7 +866,7 @@
         "id": "jXuIn8MaLNeL",
         "outputId": "c85b2752-a114-4c0b-aa45-b4f5553dd9c4"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1533,7 +1542,7 @@
         "id": "FlONuz3wMSHA",
         "outputId": "44c4dcff-71ea-4422-ffc6-5704738291a3"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1615,7 +1624,7 @@
         "id": "Whflzpl1OIa8",
         "outputId": "8853737d-ae38-47db-d6b3-2aa470df8ca7"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1659,7 +1668,7 @@
       "metadata": {
         "id": "-9mlyq2w14Rk"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1708,7 +1717,7 @@
         "id": "48m18qBCaHOm",
         "outputId": "9215bc8b-c39c-4d99-ddf0-9e044be1a034"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1760,7 +1769,7 @@
         "id": "m-IhVchVOrpz",
         "outputId": "e9b3811c-f57d-4d6e-8397-c5d77dc0bee4"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1811,7 +1820,7 @@
         "id": "P5FGST90PAPD",
         "outputId": "d5402723-8979-4f9a-9b07-2ef345b14daa"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1890,7 +1899,7 @@
         "id": "QhqAejViQSHv",
         "outputId": "515ea648-f61e-41d6-a5b7-77ff2f829457"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1983,7 +1992,7 @@
         },
         "outputId": "04c0f7d7-f6f2-4b93-b0e3-bfb437537440"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2420,7 +2429,7 @@
         "id": "F5SezlD-WLCN",
         "outputId": "ac8bf2f3-907f-4a22-ed8b-99b3d8a813c2"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2511,7 +2520,7 @@
         "id": "T064O8imrEOQ",
         "outputId": "f6e03e69-c952-49c7-b46d-3cebfae65975"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2573,7 +2582,7 @@
         "id": "qET42hGpu0s3",
         "outputId": "442de8d1-f222-4d92-a90b-ffd2c38c702d"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2612,7 +2621,7 @@
         "id": "0zQ1h7_cKuHV",
         "outputId": "35d6c58b-c34a-4935-c47a-9f74177bc1c7"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2960,7 +2969,7 @@
       "metadata": {
         "id": "OdejJgFEZX4-"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3020,7 +3029,7 @@
         "id": "czM_NFakEXXo",
         "outputId": "02a511a7-5991-41c2-d342-5896a1b9d478"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3099,7 +3108,7 @@
         "id": "NE0AnAYoNg4m",
         "outputId": "d1e491c3-64f1-4898-dfa9-b04637cb7501"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3154,7 +3163,7 @@
         "id": "t9Ad22Aqundk",
         "outputId": "00749bfd-a641-4989-91bc-6d746727a7f0"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3202,7 +3211,7 @@
         "id": "4eyhMw2m28LI",
         "outputId": "549f0eee-9278-4358-bf71-1deea7c92969"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3240,7 +3249,7 @@
       "cell_type": "markdown",
       "source": [
         "## Manual Hyper parameter tuning:\n",
-        "After using the parameters recommended by gridsearchcv on XGB and KNN- we found that XGB has higher accuracy. Now that we have a base for the parameters found by gridsearchCV - We can further tune the various parameters for XGB model to increase the accuracy of the model - Manually"
+        "After using the parameters recommended by gridsearchcv on XGB and KNN- we found that XGB has higher recall. Now that we have a base for the parameters found by gridsearchCV - We can further tune the various parameters for XGB model to increase the accuracy of the model - Manually (recall is the primary metric)"
       ],
       "metadata": {
         "id": "uAaXklw20MgA"
@@ -3276,7 +3285,7 @@
         },
         "outputId": "2454fc09-5e9c-4ea3-987b-b8097e812370"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
